--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -289,10 +289,10 @@ contact-details-component{
                 }
                 &.email-type{
                     &:after{
-                        border-color: #DFF4F7;
+                        border-color: #a4e9f3;
                     }
                     i.fa{
-                        color: #DFF4F7;
+                        color: #a4e9f3;
                     }
                 }
                 &.form-type{
