--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -171,7 +171,7 @@ contact-details-component{
                 ul.contact-tags{
                     list-style: none;
                     display: inline-block;
-                    padding-left: 10px;
+                    padding-left: 0;
                     li{
                         display: inline-block;
                         margin-right: 5px;
@@ -183,6 +183,7 @@ contact-details-component{
                 }
                 .full-name{
                     font-size: 18px;
+                    padding-right: 10px;
                 }
                 .value{
                     margin-left: 5px;
