#10543 current user profile photo added to notes

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -260,6 +260,9 @@ contact-details-component{
                     div.content-data{
                         padding-top: 5px;
                     }
+                    div.activity-time{
+                        text-align: right;
+                    }
                 }
             }
 
