--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -149,6 +149,10 @@ contact-details-component{
                                 padding: 15px 3px;
                                 font-size: 11px;
                             }
+                            @media screen and (min-width: 768px) (max-width: 1171px) {
+                                padding: 15px 3px;
+                                font-size: 11px;
+                            }
                         }
                         &.active{                            
                             border-bottom: 2px solid #48b1cc;
