#10543 css changes for tab to fit in UI

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -149,7 +149,7 @@ contact-details-component{
                                 padding: 15px 3px;
                                 font-size: 11px;
                             }
-                            @media screen and (min-width: 768px) (max-width: 1171px) {
+                            @media screen and (min-width: 768px) and (max-width: 1171px) {
                                 padding: 15px 3px;
                                 font-size: 11px;
                             }
