#10543 match padding with tab

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -145,6 +145,7 @@ contact-details-component{
                         a{
                             box-shadow: none !important;
                             background: transparent !important;
+                            padding: 15px 15px;
                             @media screen and (max-width: 492px) {
                                 padding: 15px 3px;
                                 font-size: 11px;
