#10543 moved new file refrences to jade files

--- a/templates/var/am/admin_body_scripts.jade
+++ b/templates/var/am/admin_body_scripts.jade
@@ -286,6 +286,12 @@ script(src="/admin/assets/js/indi-email-campaign/indi-email-campaign.service.js"
 script(src="/admin/assets/js/indi-email-campaign/indi-email-campaign.controller.js")
 script(src="/admin/assets/js/indi-email-campaign/indi-email-campaign.component.js")
 
+//- New Contact details
+script(src='/admin/assets/js/contact-details/contact-details.component.js')
+script(src='/admin/assets/js/contact-details/contact-details.controller.js')
+script(src='/admin/assets/js/contact-details/activity/contact-activity.component.js')
+script(src='/admin/assets/js/contact-details/activity/contact-activity.controller.js')
+
 //- Site Analytics
 script(src="/admin/assets/js/site-analytics/site-analytics.service.js")
 
