#10543 hiding 'Device & Browser' tab as we dont have data right now

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -363,7 +363,7 @@
                             </form>
                         </div>
                     </tab>
-                    <tab heading="Devices & Browser">
+                    <tab heading="Devices & Browser" class="hidden">
                         Devices & Browser
                     </tab>
                     <tab heading="Location & Network" select="vm.resizeMap()">
