#10543 bold heading for details

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -172,6 +172,9 @@ contact-details-component{
                 }
             }
             .details{
+                span.description{
+                    font-weight: bold;
+                }
                 margin-bottom: 5px;
                 ul.contact-tags{
                     list-style: none;
