#10543 Added session event to contact activities

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -330,6 +330,9 @@ contact-details-component{
         .panel-activity{
             h4{
                 margin-left: 15px;
+                span.fa{
+                    color: #48b1cc;
+                }
             }
             .panel-tools{
                 left: -20px;
