Added fingerprint image to account info

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -52,6 +52,7 @@
                             </ul>
                         </div>
                         <div class="account-info margin-top-30">
+                            <img src="/admin/assets/images/finger-print.png">  
                             <span>Account</span>: {{vm.state.organization.name}}
                         </div>
                     </div>
