--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -70,6 +70,12 @@ contact-details-component{
                     cursor: pointer;
                 }
             }
+            .account-info{
+                img{
+                    width: 30px;
+                    margin-right: 5px;
+                }
+            }
         }
         .contact-social-icons{
             ul{
