reverting changes for 10648

--- a/public/components/image-gallery_v4.html
+++ b/public/components/image-gallery_v4.html
@@ -19,7 +19,7 @@
                     <div ng-if="isEditing" class="delete-single-image center" ng-click="deleteImageFromGallery($index)">
                         <button class="ng-scope btn-delete-single-image" tooltip-placement="top" tooltip-append-to-body="true"  tooltip-append-to-body="true" tooltip="Delete this image."><i class='fa fa-trash'></i></button>
                     </div>
-                    <div ng-if="isEditing" class="center" ng-click="addImageFromMedia(component._id, component.images.length, false)">
+                    <div ng-if="isEditing" class="center" ng-click="addImageFromMedia(component._id, $index, false)">
                         <a class="add-addtional" tooltip-placement="top" tooltip-append-to-body="true"  tooltip-append-to-body="true" tooltip="Add another image."><i class='fa fa-plus'></i></a>
                     </div>
             </div>
