--- a/public/admin/assets/js/contact-details/activity/contact-activity.component.html
+++ b/public/admin/assets/js/contact-details/activity/contact-activity.component.html
@@ -1,5 +1,12 @@
 <div class="margin-top-20 activity-timeline">
-    <h3>Activity Timeline</h3>
+	
+	<div class="col-xs-8 col-sm-8 col-md-7 padding-left-0 padding-right-0 activity-date-filter pull-right">
+		<span class="filter-label">Jump to:</span>
+		<indi-datepicker ng-model="vm.state.dateFilter" popup="MM/dd/yy"></indi-datepicker>
+	</div>
+	<div class="col-xs-12 col-sm-12 col-md-5 padding-left-0 padding-right-0">
+		<h3 class="inline-block">Activity Timeline</h3>
+	</div>
     <div class="activity-filter">
     	<div class="col-xs-12 col-md-10 col-sm-8 padding-left-0 padding-right-0">
 	    	<span>Filter</span>
