Contacts > Manage > Default tag(s) do not appear in 'Tag' drop down menu, if user tries to create a new contact on clicking 'new contact' Button #9834

--- a/public/admin/assets/views/partials/new-contact-modal.html
+++ b/public/admin/assets/views/partials/new-contact-modal.html
@@ -39,7 +39,7 @@
                 </label>
                 <ui-select multiple tagging="tagToContact" tagging-match-to-key="label" ng-model="contact.tags" theme="bootstrap" ng-disabled="disabled">
                     <ui-select-match placeholder="Select tags...">{{$item.label}}</ui-select-match>
-                    <ui-select-choices repeat="tag in contactTags | orderBy:'label' | filter:$select.search |filter:customTagFilert" >
+                    <ui-select-choices repeat="tag in contactTags | orderBy:'label' | filter:$select.search" >
                         {{tag.label}}
                     </ui-select-choices>
                 </ui-select>
